# NeuralEngine

./: .gitmodules  CMakeLists.txt  README.md  REDAME.md
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/glfw/include/GLFW/: glfw3.h
res/: ambientFS.glsl  ambientVS.glsl
res/shaders/opengl/: ambient.fs  ambient.vs  fragment.glsl  vertex.glsl
src/: CMakeLists.txt  main.cpp
src/Core/: CMakeLists.txt
src/Core/include/Core/: Application.hpp  Engine.hpp  InputManager.hpp
src/Core/src/: Application.cpp  Application.hpp  Engine.cpp  InputManager.cpp  Log.cpp  Log.hpp  main.cpp
src/Graphic/: CMakeLists.txt
src/Graphic/include/Graphic/: Camera.hpp  Graphic.hpp  Model.hpp  Renderer.hpp  Scene.hpp  Shader.hpp  Window.hpp
src/Graphic/includes/: Model.hpp  Renderer.hpp  Shader.hpp  Window.hpp
src/Graphic/src/: Camera.cpp  Model.cpp  Renderer.cpp  Scene.cpp  Shader.cpp  Window.cpp  Window.hpp
src/System/: CMakeLists.txt
src/System/include/System/: Log.hpp  ResourceManager.hpp
src/System/src/: Log.cpp  ResourceManager.cpp
src/Utils/: CMakeLists.txt
src/Utils/include/Utils/: Log.hpp  Logger.hpp
src/Utils/src/: Logger.cpp
